--- a/Play That Note/vexFlow/css/main.css
+++ b/Play That Note/vexFlow/css/main.css
@@ -1,12 +1,12 @@
 
 #note {
-/*    background-color: yellow;*/
+/*    background-color: grey;*/
     width: 100%;
     margin:0;
 }
 
 body {
-/*    background-color: lightblue;*/
+/*    background-color: whitesmoke;*/
     overflow: hidden;
     margin: 0;
 }
